--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "template-python-poetry-docker"
+name = "anki-card-generator"
 version = "0.1.0"
 description = ""
 authors = [
@@ -10,6 +10,7 @@ requires-python = ">=3.13,<3.14"
 dependencies = [
     "pytest>=8.3.5,<9.0.0",
     "pytest-cov>=4.0.0,<5.0.0",
+    "fastapi (>=0.115.12,<0.116.0)",
 ]
 
 [build-system]
