--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "pytest>=8.3.5,<9.0.0",
     "pytest-cov>=4.0.0,<5.0.0",
     "fastapi (>=0.115.12,<0.116.0)",
+    "openai (>=1.76.0,<2.0.0)",
 ]
 
 [build-system]
