--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ sphinx-autobuild = ">=2024.10.3,<2025.0.0"
 ruff = ">=0.9.7,<1.0.0"
 coverage = ">=7.6.12,<8.0.0"
 pre-commit = ">=4.1.0,<5.0.0"
+types-requests = "^2.32.0.20250328"
 
 [tool.poetry.group.prod]
 optional = true
