--- a/compose/local/docker-compose.local.yml
+++ b/compose/local/docker-compose.local.yml
@@ -22,15 +22,16 @@ services:
       - '8000:8000'
     command: /start
 
-  # Uncomment the following lines to enable the PostgreSQL service
-  # postgres:
-  #   build:
-  #     context: ../..  # Adjusted to point to the root of the project
-  #     dockerfile: ./compose/production/postgres/Dockerfile
-  #   image: production_postgres
-  #   container_name: local_postgres
-  #   volumes:
-  #     - local_postgres_data:/var/lib/postgresql/data
-  #     - local_postgres_data_backups:/backups
-  #   env_file:
-  #     - ../../.envs/.local/.postgres  # Updated path to .env file
+  anki-desktop:
+    image: "pnorcross/anki-desktop:latest"
+    volumes:
+      - ../../app/data/anki/config:/config/app
+    ports:
+      - 3000:3000
+      # Anki Connect port
+      - 8765:8765
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3000"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
