--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,10 +32,11 @@ repos:
       - id: ruff-format
   # Add mypy for type checking
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.4.1  # Use the latest stable version of mypy
+    rev: v1.5.1  # Use the latest stable version of mypy
     hooks:
       - id: mypy
         args: [--strict]
+        additional_dependencies: [types-requests]
 
 # sets up .pre-commit-ci.yaml to ensure pre-commit dependencies stay up to date
 ci:
