--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "template-python-poetry-docker"
+name = "anki-card-generator"
 version = "0.1.0"
 description = ""
 authors = [
@@ -10,6 +10,8 @@ requires-python = ">=3.13,<3.14"
 dependencies = [
     "pytest>=8.3.5,<9.0.0",
     "pytest-cov>=4.0.0,<5.0.0",
+    "fastapi (>=0.115.12,<0.116.0)",
+    "openai (>=1.76.0,<2.0.0)",
 ]
 
 [build-system]
@@ -30,6 +32,7 @@ sphinx-autobuild = ">=2024.10.3,<2025.0.0"
 ruff = ">=0.9.7,<1.0.0"
 coverage = ">=7.6.12,<8.0.0"
 pre-commit = ">=4.1.0,<5.0.0"
+types-requests = "^2.32.0.20250328"
 
 [tool.poetry.group.prod]
 optional = true
