--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ dependencies = [
     "pytest-cov>=4.0.0,<5.0.0",
     "fastapi (>=0.115.12,<0.116.0)",
     "openai (>=1.76.0,<2.0.0)",
+    "uvicorn (>=0.34.2,<0.35.0)",
+    "python-multipart (>=0.0.20,<0.0.21)",
 ]
 
 [build-system]
