🔥 Frontend and UI updates / Added Parameters for LLM (#3)
* Update .gitignore

* Configured front end

* Added openai secrets to protected secrets folder, added sample .envs

* Added dynamic prompt generation and support for multiple languages

* Update ci.yml to use mock secrets

* And another

* update envs for docs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,12 @@ jobs:
     steps:
       - name: Checkout Code Repository
         uses: actions/checkout@v4
+      # Eventually, this should be moved over to env variables inserted into the docker image
+      - name: Copy .sample environment files
+        run: |
+          mkdir -p .envs/.local/.live
+          cp .envs/.local/.sample/.app .envs/.local/.live/.app
+          cp .envs/.local/.sample/.openai .envs/.local/.live/.openai
 
       - name: Build the Stack
         run: docker compose -f compose/local/docker-compose.local.yml build local-app
